--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect": "^2.29.1",
     "connect-livereload": "^0.5.4",
     "debowerify": "^1.3.1",
+    "glob": "~7.0.3",
     "gulp": "3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cache": "^0.4.2",
@@ -24,7 +25,7 @@
     "gulp-debug": "^2.1.2",
     "gulp-fingerprint": "^0.3.2",
     "gulp-imagemin": "^2.4.0",
-    "gulp-jshint": "^2.0.0",
+    "gulp-jshint": "^2.0.4",
     "gulp-less": "^3.0.5",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.2.0",
@@ -34,15 +35,15 @@
     "gulp-size": "^2.0.0",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
+    "jshint": "^2.9.4",
     "jshint-stylish": "^2.1.0",
     "mocha": "^2.4.5",
     "npm-check-updates": "^2.5.8",
     "opn": "^4.0.0",
     "partialify": "^3.1.1",
-    "should": "^8.2.1",
-    "vinyl-source-stream": "^1.1.0",
     "proxyquireify": "~3.1.1",
-    "glob": "~7.0.3"
+    "should": "^8.2.1",
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "when": "~3.7.7",
